prevent body overflow issue

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ background: -webkit-linear-gradient(-45deg, rgba(137,137,137,1) 0%,rgba(56,56,56
 background: linear-gradient(135deg, rgba(137,137,137,1) 0%,rgba(56,56,56,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#898989', endColorstr='#383838',GradientType=1 );
   /*max-height: 100vh;*/
+overflow-x: hidden;
 }
 
 @media (min-width: 768px) {
